# waylandcpp

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/query_display/: CMakeLists.txt  main.cpp  output_description.hpp
include/waylandcpp/: callback.hpp  context.hpp  local_storage.hpp
include/waylandcpp/wire/: buffer.hpp  buffer_parser.hpp  object_builder.hpp  socket.hpp  types.hpp
src/: CMakeLists.txt  buffer.cpp  buffer_parser.cpp  main.cpp  object_builder.cpp  socket.cpp
